css/style.css
/* ... */
/*--------
Font
----------*/
@font-face {
  font-family: "GT America";
  src: url("../assets/font/GT-AMERICA-REGULAR.woff");
}

@font-face {
  font-family: "Redaction";
  src: url("../assets/font/Redaction-Regular.woff");
}

@font-face {
  font-family: "Redaction 50";
  src: url("../assets/font/Redaction_50-Regular.woff");
}

/*--------
Cookies
----------*/
@media (min-width: 32em) {
  .cc-window.cc-banner {
    padding: 1.5em 1.8em
  }

  .cc-message {
    font-size: calc(10px + (15 - 10) * ((100vw - 576px) / (2560 - 576)));
    line-height: 1.4;
    font-family: GT America;
  }

  .cc-compliance {
    padding-left: 4em
  }
}

/*--------
Global
----------*/
html {
  color: white;
  background-color: black;
  overflow-x: hidden;
  font-weight: 400;
  font-optical-sizing: auto;
  text-rendering: optimizeLegibility;
  font-variant-ligatures: common-ligatures;
  font-variant-numeric: slashed-zero;
  cursor: crosshair;
  font-family: "Redaction", serif;
  hyphens: auto;
}

::selection {
  color: black;
  background: white;
}

a {
  color: white;
  text-decoration: none;
  font-family: "Redaction", serif;
  word-break: break-all;
}

a:visited {
  color: white;
  text-decoration: none;
}

body {
  margin: 0;
}

img {
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  filter: grayscale(100%);
  filter: gray;
}

img:hover {
  -webkit-filter: none;
  -moz-filter: none;
  -ms-filter: none;
  filter: none;
}

h1 {
  font-family: "Redaction", serif;
  font-weight: 400;
  text-transform: uppercase;
  margin: 0;
}

h2 {
  font-weight: 400;
  text-transform: uppercase;
}

p {
  font-family: "Redaction", serif;
  font-weight: 400;
}

video {
  width: 100%;
  object-fit: cover;
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  filter: grayscale(100%);
  filter: gray;
}

video:hover {
  -webkit-filter: none;
  -moz-filter: none;
  -ms-filter: none;
  filter: none;
  filter: none;
}

.redaction:hover {
  font-family: "Redaction 50", serif;
}

.grid {
  display: grid;
  grid-template-columns: repeat(10, 1fr);
}

.hide {
  display: none !important;
}

#disclaimer {
  position: fixed;
  display: none;
  width: 100%;
  height: 100%;
  background: #000;
  z-index: 101;
  align-items: center;
  text-align: center;
  justify-content: center;
}

#disclaimer>p {
  font-size: 1.8em;
}

/*--------
Header
----------*/
nav {
  width: 100%;
  height: 8vh;
  position: fixed;
  z-index: 100 !important;
  border-bottom: 1px solid white;
  font-size: calc(20px + (35 - 20) * ((100vw - 576px) / (2560 - 576)));
  text-transform: uppercase;
}

.hgrid {
  display: grid;
  grid-template-columns: 1fr 6fr 1fr 1fr 1fr;
}

.active {
  background-color: black;
}

.header {
  height: 100%;
}

nav .header div {
  text-align: center;
  position: relative;
}

.home-btn {
  display: grid;
  grid-column: 1;
  border-right: 1px solid white;
}

.jumpto-btn {
  display: grid;
  grid-column: 3;
  border-left: 1px solid white;
}

nav .header .jumpto-btn .dropdown-content {
  display: none;
}

nav .header .jumpto-btn:hover .dropdown-content {
  display: block;
  position: absolute;
  width: 100%;
  left: -1px;
  margin-top: 8vh;
  background-color: #000000;
  border: 1px solid #ffffff;
  z-index: 99;
  text-align: center;
}

nav .header .jumpto-btn:hover .dropdown-content a {
  display: grid;
  text-align: center;
  border-top: 1px solid #ffffff;
  border-bottom: 1px solid #ffffff;
  height: 8vh;
  align-items: center;
  justify-content: center;
}

nav .header .jumpto-btn:hover .dropdown-content {
  display: block;
  position: absolute;
  width: 100%;
  left: -1px;
  margin-top: 8vh;
  background-color: #000000;
  border: 1px solid #ffffff;
  z-index: 10;
  text-align: center;
}

nav .header .jumpto-btn:hover .dropdown-content a {
  display: grid;
  text-align: center;
  border-top: 1px solid #ffffff;
  border-bottom: 1px solid #ffffff;
  height: 8vh;
  align-items: center;
  justify-content: center;
}

.archive-btn {
  display: grid;
  grid-column: 4;
  border-left: 1px solid #ffffff;
  border-right: 1px solid #ffffff;
}

.about-btn {
  display: grid;
  grid-column: 5;
}

.btn {
  display: grid;
  place-items: center;
}

/*--------
Index
----------*/
.introduction {
  min-height: 100vh;
  width: 100%;
  place-items: center;
  position: sticky;
  top: 0;
  background-color: #000000;
}

.choose {
  min-height: 100vh;
  width: 100%;
  place-items: center;
  position: sticky;
  top: 0;
}

.introduction-content {
  grid-column: 2 / span 8;
}

.introduction-text {
  font-size: calc(25px + (50 - 25) * ((100vw - 576px) / (2560 - 576)));
  text-align: justify;
  text-align-last: center;
}

.scroll-down {
  grid-column: 2 / span 8;
  align-self: end;
  place-items: center;
  position: absolute;
  margin-bottom: 2%;
  z-index: 2;
}

.scroll-down p {
  font-family: "GT America", sans-serif;
  font-feature-settings: "ss03";
  text-align: center;
  font-size: calc(13px + (20 - 17) * ((100vw - 576px) / (2560 - 576)));
  margin: 0;
}

.one {
  background-image: url("../assets/img/home/2bitmap.webp");
  background-size: cover;
  grid-template-areas: "overlap";
  background-image: url("../assets/img/home/2bitmap.webp");
  background-size: cover;
}

.two {
  background-image: url("../assets/img/home/1bitmap.webp");
  background-size: cover;
}

.go-to-rabbit {
  cursor: pointer;
  display: grid;
  grid-column: 2 / span 4;
  grid-template-areas: "overlap";
  border: 1px solid white;
  width: 85%;
  aspect-ratio: 1;
  font-size: calc(25px + (50 - 25) * ((100vw - 576px) / (2560 - 576)));
  background-image: url("../assets/videos/buttons/followrabbit.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-color: #000000;
  text-transform: uppercase;
}

.keywords {
  width: 100%;
  height: 100%;
  grid-area: overlap;
  z-index: 1;
  display: none;
  text-transform: uppercase;
}
/* ... */

